---
source: crates/mdtest/src/lib.rs
expression: snapshot
---

---
mdtest name: concatenate.md - `typing.Concatenate` - Invalid uses of `Concatenate` - Too few arguments
mdtest path: crates/ty_python_semantic/resources/mdtest/generics/pep695/concatenate.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from typing import Callable, Concatenate
 2 | 
 3 | class Foo[**P]:
 4 |     attr: Callable[P, None]
 5 | 
 6 | def _(
 7 |     # error: [invalid-type-form] "`typing.Concatenate` requires at least 2 arguments when used in a type expression (got 0)"
 8 |     a: Callable[Concatenate[()], int],
 9 |     # error: [invalid-type-form] "`typing.Concatenate` requires at least 2 arguments when used in a type expression (got 1)"
10 |     b: Callable[Concatenate[int], int],
11 |     # error: [invalid-type-form] "`typing.Concatenate` requires at least 2 arguments when used in a type expression (got 1)"
12 |     c: Callable[Concatenate[(int,)], int],
13 |     # error: [invalid-type-form] "`typing.Concatenate` requires at least two arguments when used in a parameter annotation"
14 |     d: Callable[Concatenate, int],
15 | ):
16 |     reveal_type(a)  # revealed: (...) -> int
17 |     reveal_type(b)  # revealed: (...) -> int
18 |     reveal_type(c)  # revealed: (...) -> int
19 | 
20 | # error: [invalid-type-form] "`typing.Concatenate` requires at least 2 arguments when used in a type expression (got 0)"
21 | reveal_type(Foo[Concatenate[()]]().attr)  # revealed: (...) -> None
22 | # error: [invalid-type-form] "`typing.Concatenate` requires at least 2 arguments when used in a type expression (got 1)"
23 | reveal_type(Foo[Concatenate[int]]().attr)  # revealed: (...) -> None
24 | # error: [invalid-type-form] "`typing.Concatenate` requires at least 2 arguments when used in a type expression (got 1)"
25 | reveal_type(Foo[Concatenate[(int,)]]().attr)  # revealed: (...) -> None
26 | # error: [invalid-type-form] "`typing.Concatenate` requires at least two arguments when used in a type expression"
27 | reveal_type(Foo[Concatenate]().attr)  # revealed: (...) -> None
28 | # error: [invalid-type-form] "`typing.Concatenate` is not allowed in this context in a type expression"
29 | reveal_type(Foo[[Concatenate]]().attr)  # revealed: (Unknown, /) -> None
30 | # error: [invalid-type-form] "`typing.Concatenate` is not allowed in this context in a type expression"
31 | reveal_type(Foo[[Concatenate, int]]().attr)  # revealed: (Unknown, int, /) -> None
32 | 
33 | # error: [invalid-type-form] "`typing.Concatenate` is not allowed in this context in a type expression"
34 | reveal_type(Foo[[Concatenate[int], str]]().attr)  # revealed: (Unknown, str, /) -> None
35 | # error: [invalid-type-form] "`typing.Concatenate` is not allowed in this context in a type expression"
36 | reveal_type(Foo[[Concatenate[int, str], str]]().attr)  # revealed: (Unknown, str, /) -> None
37 | # error: [invalid-type-form] "`typing.Concatenate` is not allowed in this context in a type expression"
38 | reveal_type(Foo[[Concatenate[()], str]]().attr)  # revealed: (Unknown, str, /) -> None
39 | 
40 | # Subscripting a class that does not have "exactly one paramspec" takes a different code path;
41 | # these tests exercise that code path
42 | class Bar[**P1, **P2]:
43 |     a: Callable[P1, int]
44 |     b: Callable[P2, int]
45 | 
46 | # error: [invalid-type-form] "`typing.Concatenate` requires at least two arguments when used in a type expression"
47 | # error: [invalid-type-form] "`typing.Concatenate` requires at least two arguments when used in a type expression"
48 | reveal_type(Bar[Concatenate, Concatenate]().a)  # revealed: (...) -> int
49 | # error: [invalid-type-form] "`typing.Concatenate` is not allowed in this context in a type expression"
50 | # error: [invalid-type-form] "`typing.Concatenate` is not allowed in this context in a type expression"
51 | reveal_type(Bar[[Concatenate], [Concatenate]]().a)  # revealed: (Unknown, /) -> int
```

# Diagnostics

```
error[invalid-type-form]: `typing.Concatenate` requires at least 2 arguments when used in a type expression (got 0)
 --> src/mdtest_snippet.py:8:17
  |
8 |     a: Callable[Concatenate[()], int],
  |                 ^^^^^^^^^^^^^^^

```

```
error[invalid-type-form]: `typing.Concatenate` requires at least 2 arguments when used in a type expression (got 1)
  --> src/mdtest_snippet.py:10:17
   |
10 |     b: Callable[Concatenate[int], int],
   |                 ^^^^^^^^^^^^^^^^

```

```
error[invalid-type-form]: `typing.Concatenate` requires at least 2 arguments when used in a type expression (got 1)
  --> src/mdtest_snippet.py:12:17
   |
12 |     c: Callable[Concatenate[(int,)], int],
   |                 ^^^^^^^^^^^^^^^^^^^

```

```
error[invalid-type-form]: `typing.Concatenate` requires at least two arguments when used in a parameter annotation
  --> src/mdtest_snippet.py:14:17
   |
14 |     d: Callable[Concatenate, int],
   |                 ^^^^^^^^^^^

```

```
error[invalid-type-form]: `typing.Concatenate` requires at least 2 arguments when used in a type expression (got 0)
  --> src/mdtest_snippet.py:21:17
   |
21 | reveal_type(Foo[Concatenate[()]]().attr)  # revealed: (...) -> None
   |                 ^^^^^^^^^^^^^^^

```

```
error[invalid-type-form]: `typing.Concatenate` requires at least 2 arguments when used in a type expression (got 1)
  --> src/mdtest_snippet.py:23:17
   |
23 | reveal_type(Foo[Concatenate[int]]().attr)  # revealed: (...) -> None
   |                 ^^^^^^^^^^^^^^^^

```

```
error[invalid-type-form]: `typing.Concatenate` requires at least 2 arguments when used in a type expression (got 1)
  --> src/mdtest_snippet.py:25:17
   |
25 | reveal_type(Foo[Concatenate[(int,)]]().attr)  # revealed: (...) -> None
   |                 ^^^^^^^^^^^^^^^^^^^

```

```
error[invalid-type-form]: `typing.Concatenate` requires at least two arguments when used in a type expression
  --> src/mdtest_snippet.py:27:17
   |
27 | reveal_type(Foo[Concatenate]().attr)  # revealed: (...) -> None
   |                 ^^^^^^^^^^^

```

```
error[invalid-type-form]: `typing.Concatenate` is not allowed in this context in a type expression
  --> src/mdtest_snippet.py:29:18
   |
29 | reveal_type(Foo[[Concatenate]]().attr)  # revealed: (Unknown, /) -> None
   |                  ^^^^^^^^^^^
   |
info: `typing.Concatenate` is only valid:
info:  - as the first argument to `Callable`
info:  - as a type argument for a `ParamSpec` parameter

```

```
error[invalid-type-form]: `typing.Concatenate` is not allowed in this context in a type expression
  --> src/mdtest_snippet.py:31:18
   |
31 | reveal_type(Foo[[Concatenate, int]]().attr)  # revealed: (Unknown, int, /) -> None
   |                  ^^^^^^^^^^^
   |
info: `typing.Concatenate` is only valid:
info:  - as the first argument to `Callable`
info:  - as a type argument for a `ParamSpec` parameter

```

```
error[invalid-type-form]: `typing.Concatenate` is not allowed in this context in a type expression
  --> src/mdtest_snippet.py:34:18
   |
34 | reveal_type(Foo[[Concatenate[int], str]]().attr)  # revealed: (Unknown, str, /) -> None
   |                  ^^^^^^^^^^^^^^^^
   |
info: `typing.Concatenate` is only valid:
info:  - as the first argument to `Callable`
info:  - as a type argument for a `ParamSpec` parameter

```

```
error[invalid-type-form]: `typing.Concatenate` is not allowed in this context in a type expression
  --> src/mdtest_snippet.py:36:18
   |
36 | reveal_type(Foo[[Concatenate[int, str], str]]().attr)  # revealed: (Unknown, str, /) -> None
   |                  ^^^^^^^^^^^^^^^^^^^^^
   |
info: `typing.Concatenate` is only valid:
info:  - as the first argument to `Callable`
info:  - as a type argument for a `ParamSpec` parameter

```

```
error[invalid-type-form]: `typing.Concatenate` is not allowed in this context in a type expression
  --> src/mdtest_snippet.py:38:18
   |
38 | reveal_type(Foo[[Concatenate[()], str]]().attr)  # revealed: (Unknown, str, /) -> None
   |                  ^^^^^^^^^^^^^^^
   |
info: `typing.Concatenate` is only valid:
info:  - as the first argument to `Callable`
info:  - as a type argument for a `ParamSpec` parameter

```

```
error[invalid-type-form]: `typing.Concatenate` requires at least two arguments when used in a type expression
  --> src/mdtest_snippet.py:48:17
   |
48 | reveal_type(Bar[Concatenate, Concatenate]().a)  # revealed: (...) -> int
   |                 ^^^^^^^^^^^

```

```
error[invalid-type-form]: `typing.Concatenate` requires at least two arguments when used in a type expression
  --> src/mdtest_snippet.py:48:30
   |
48 | reveal_type(Bar[Concatenate, Concatenate]().a)  # revealed: (...) -> int
   |                              ^^^^^^^^^^^

```

```
error[invalid-type-form]: `typing.Concatenate` is not allowed in this context in a type expression
  --> src/mdtest_snippet.py:51:18
   |
51 | reveal_type(Bar[[Concatenate], [Concatenate]]().a)  # revealed: (Unknown, /) -> int
   |                  ^^^^^^^^^^^
   |
info: `typing.Concatenate` is only valid:
info:  - as the first argument to `Callable`
info:  - as a type argument for a `ParamSpec` parameter

```

```
error[invalid-type-form]: `typing.Concatenate` is not allowed in this context in a type expression
  --> src/mdtest_snippet.py:51:33
   |
51 | reveal_type(Bar[[Concatenate], [Concatenate]]().a)  # revealed: (Unknown, /) -> int
   |                                 ^^^^^^^^^^^
   |
info: `typing.Concatenate` is only valid:
info:  - as the first argument to `Callable`
info:  - as a type argument for a `ParamSpec` parameter

```
